# auth-web-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  configs.json  install.sh  start.sh
Executable/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt
Server/algorithms/include/: jwt.h  randomBase64.h  sha256.h
Server/algorithms/source/: jwt.cpp  randomBase64.cpp  sha256.cpp
Server/database/: CMakeLists.txt
Server/database/include/: db.h  dbstructure.h
Server/database/include/algorithms/: algorithms.h
Server/database/include/mongodb/: configsdb.h  mongo.h  mongodata.h
Server/database/include/redis/: configsJWT.h  configsdb.h  redis.h
Server/database/mongodb/include/: configsdb.h  mongo.h  mongodata.h  user.h
Server/database/mongodb/source/: mongo.cpp
Server/database/postgres/include/: configspostgres.h  postgres.h
Server/database/postgres/source/: postgres.cpp
Server/database/source/: db.cpp
Server/database/source/algorithms/: BaseHandler.cpp  algorithms.cpp
Server/database/source/mongodb/: mongo.cpp
Server/database/source/redis/: redis.cpp
Server/factory/include/: factory.h
Server/factory/source/: factory.cpp
Server/handlers/include/: AuthRefreshTokenHandler.h  HelloRequestHandler.h  LogInRequestHandler.h  LogOutRequestHandler.h  SignInRequestHandler.h  SignOutRequestHandler.h  SignUpRequestHandler.h  handlers.h
Server/handlers/include/Base/: BaseHandler.h
Server/handlers/source/: AuthRefreshTokenHandler.cpp  HelloRequestHandler.cpp  LogInRequestHandler.cpp  LogOutRequestHandler.cpp  SignInRequestHandler.cpp  SignOutRequestHandler.cpp  SignUpRequestHandler.cpp  handlers.cpp
Server/handlers/source/Base/: BaseHandler.cpp
Server/server-run/include/: preloader.h  server.h
Server/server-run/source/: preloader.cpp  server.cpp
modules/: CMakeLists.txt
modules/database/algorithms/include/: algorithms.hpp
modules/database/algorithms/source/: algorithms.cpp
modules/database/mail/include/: configsgmail.hpp  mail.hpp
modules/database/mail/source/: mail.cpp
modules/database/mongodb/include/: configsdb.hpp  mongo.hpp  mongodata.hpp  user.hpp
modules/database/mongodb/source/: mongo.cpp
modules/database/redis/include/: configsJWT.hpp  configsdb.hpp  redis.hpp  redisdata.hpp
modules/database/redis/source/: redis.cpp
modules/handlers/include/: AdminHandler.hpp  AuthHandler.hpp  AuthRefreshTokenHandler.hpp  SignInRequestHandler.hpp  SignOutRequestHandler.hpp  SignUpRequestHandler.hpp
modules/handlers/include/Base/: BaseHandler.hpp  RequestHandlerFactory.hpp  urls.hpp
modules/handlers/include/Base/static/: AuthStatic.hpp
modules/handlers/source/: AdminHandler.cpp  AuthHandler.cpp  AuthRefreshTokenHandler.cpp  SignInRequestHandler.cpp  SignOutRequestHandler.cpp  SignUpRequestHandler.cpp
modules/handlers/source/Base/: BaseHandler.cpp  RequestHandlerFactory.cpp
modules/methods/include/: AdminMethods.hpp  AuthMethods.hpp
modules/methods/source/: AdminMethods.cpp  AuthMethods.cpp
modules/server-run/include/: preloader.hpp  server.hpp
modules/server-run/source/: preloader.cpp  server.cpp
modules/server/include/: preloader.hpp
modules/server/include/Base/: BaseHandler.hpp  BaseJson.hpp  ErrorHandler.hpp  Factory.hpp  RequestHandlerFactory.hpp
modules/server/include/Base/libs/: ArduinoJson.hpp
modules/server/include/Base/static/: AdminStatic.hpp  AuthStatic.hpp  urls.hpp
modules/server/source/: preloader.cpp  server.cpp
modules/server/source/Base/: BaseHandler.cpp  BaseJson.cpp  ErrorHandler.cpp  Factory.cpp  RequestHandlerFactory.cpp
